--- a/算法解析.md
+++ b/算法解析.md
@@ -1,3 +1,4 @@
+```JavaScript
 /*
  * Copyright (c) 2018, 奶爸<1@5.nu>
  * All rights reserved.
@@ -1891,3 +1892,4 @@ Readability.prototype = {
 if (typeof module === "object") {
     module.exports = Readability;
 }
+```
